# spec-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION-FIXED.md  QUICKSTART.md  README.md  STRUCTURE_VISUAL_GUIDE.md  TEST.md  install.sh  pyproject.toml  verify.sh
core/: CLAUDE.md
docs/: PLUGIN_DEVELOPMENT.md  TROUBLESHOOTING.md
examples/ai-chatbot/: .env.example  .gitignore  README.md  requirements.txt
examples/fastapi-todo-api/: .env.example  .gitignore  README.md  pytest.ini  requirements.txt
research/: CONCEPTS.md  README.md  RESEARCH_SUMMARY.md  griffe-ast-documentation-research.md  living-documentation-automation.md
research/_templates/: research-document.md
research/ci-cd-platforms/: README.md
research/code-quality/: README.md
research/living-documentation/: LIVING_DOCUMENTATION.md  MKDOCS_ECOSYSTEM.md  README.md
research/plugin-architecture/: README.md
research/testing-strategies/: README.md
research/tools-and-libraries/: README.md
spec_kit/: __init__.py  __main__.py  cli.py
spec_kit/commands/: __init__.py  init.py  verify.py
spec_kit/core/: __init__.py  installer.py  validator.py
spec_kit/utils/: __init__.py  colors.py  file_ops.py
specs/: SPECIFICATIONS_SUMMARY.md
specs/features/: architecture-documentation.md  cli-modernization.md  documentation-improvements.md  example-ai-chatbot.md  example-fastapi-todo.md  example-sam-serverless.md  living-documentation-skill.md  plugin-best-practices-agents.md  plugin-best-practices-ci-cd.md  plugin-best-practices-code-quality.md  (+9 more)
tests/: __init__.py  conftest.py  run_tests.sh  test_cli.py  test_colors.py  test_commands.py  test_file_ops.py  test_installer.py  test_integration.py  test_validator.py
(+71 files in other folders)
