[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-kit"
version = "2.0.0"
description = "Professional spec-driven development toolkit for Claude Code"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Spec-Kit Team"}
]
keywords = ["claude", "spec-driven", "development", "cli", "ai", "code-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
]

[project.scripts]
spec-kit = "spec_kit.cli:main"

[project.urls]
Homepage = "https://github.com/spec-kit/spec-kit"
Documentation = "https://github.com/spec-kit/spec-kit#readme"
Repository = "https://github.com/spec-kit/spec-kit"
Issues = "https://github.com/spec-kit/spec-kit/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
packages = ["spec_kit", "spec_kit.commands", "spec_kit.core", "spec_kit.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
